# token-sprout

./: .gitignore  LICENSE  README.md  README.zh-TW.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: technical-spec.md
examples/: plant_state.example.json
tests/: conftest.py  test_game.py  test_install_claude.py  test_install_statusline.py  test_proxy_smoke.py  test_run.py  test_security_hardening.py  test_sse_parser.py  test_state.py  test_statusline.py  test_ui.py  test_usage_parser.py
token_sprout/: __init__.py  ascii_art.py  cli.py  game.py  proxy.py  state.py  ui.py  usage_parser.py
