[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-sprout"
version = "0.1.0"
description = "Grow a tiny terminal plant with the tokens you spend on AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["claude-code", "anthropic", "terminal-ui", "developer-tools", "ai-tools"]
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "filelock>=3.12",
    "rich>=13",
]

[project.scripts]
token-sprout = "token_sprout.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # starlette's TestClient runs on httpx2 (its httpx-1.x fallback emits a
    # deprecation warning, which CI's -W error escalates to a failure). The
    # proxy's own runtime client stays on httpx — the two coexist.
    "httpx2>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["token_sprout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
